# mech-interact

./: .gitignore  .gitleaksignore  .spelling  AUDIT-VERIFICATION.md  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  Makefile  Pipfile  README.md  SECURITY.md  UPGRADING.md  pyproject.toml  tox.ini
.github/workflows/: main_workflow.yml  release.yaml
docs/: audit_verification.md
scripts/: bump.py  check_doc_ipfs_hashes.py  compare_hashes.py
