[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "mech-interact"
version = "0.1.0"
description = "Mech interaction skill for autonomous agents"
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy==0.21.18",
    "open-aea==2.2.1",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-test-autonomy==0.21.18",
    "open-aea-helpers==0.21.18",
    "requests<2.33.0,>=2.28.1",
    "aiohttp<4.0.0,>=3.8.5",
    "asn1crypto<1.5.0,>=1.4.0",
    "grpcio==1.78.0",
    "jsonschema<5.0.0,>=4.23.0",
    "hypothesis==6.21.6",
    "pytz==2022.2.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-randomly==4.0.1",
    "openapi-core==0.22.0",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "typing_extensions<=4.15.0,>=3.10.0.2",
    "py-multibase==1.0.3",
    "py-multicodec==0.2.1",
    "py-eth-sig-utils",
    "protobuf<6,>=5",
    "multiaddr==0.0.9",
    "web3<8,>=7.0.0",
    "certifi",
    "multidict",
    "ecdsa>=0.15",
    "ipfshttpclient==0.8.0a2",
    "eth_typing",
    "py-ecc==8.0.0",
    "eth-abi==5.2.0",
    "eth-utils==5.3.0",
    "hexbytes",
    "packaging",
    "pycryptodome==3.20.0",
    "click<9,>=8.1.0",
    "setuptools<=81.0.0",
    "marshmallow<4.0.0",
    "toml==0.10.2",
    "bases==0.3.0",
    "typing_validation==1.1.0",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/mech-interact"

[dependency-groups]
dev = [
    "tomte[cli, tests]==0.6.5",
    "pre-commit==3.0.1",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
