[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "mech-interact"
version = "0.1.0"
description = "Mech interaction skill for autonomous agents"
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy==0.21.20",
    "open-aea==2.2.3",
    "open-aea-ledger-ethereum==2.2.3",
    "open-aea-ledger-cosmos==2.2.3",
    "open-aea-cli-ipfs==2.2.3",
    "open-aea-test-autonomy==0.21.20",
    "open-aea-helpers==0.21.20",
    "requests>=2.28.1",
    "aiohttp<4.0.0,>=3.8.5",
    "asn1crypto<1.5.0,>=1.4.0",
    "grpcio==1.78.0",
    "jsonschema<5.0.0,>=4.23.0",
    "hypothesis>=6",
    "pytest>=8,<10",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7,<8",
    "pytest-randomly<5,>=4",
    "openapi-core<0.23,>=0.22",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "web3<8,>=7.0.0",
    "certifi",
    "multidict",
    "ecdsa>=0.15",
    "py-ecc<10,>=8",
    "click<9,>=8.1.0",
    "setuptools<=81.0.0",
    "marshmallow<4.0.0",
    "bases>=0.3,<0.4",
    "typing_validation<2,>=1.1",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/mech-interact"

[dependency-groups]
dev = [
    # TODO: flip to ==0.7.0 once tomte v0.7.0 publishes to PyPI.
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@v0.7.0",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
pytest_targets = [
    "packages/valory/skills/mech_interact_abci/tests",
    "packages/valory/contracts/mech/tests",
    "packages/valory/contracts/mech_mm/tests",
    "packages/valory/contracts/mech_marketplace_legacy/tests",
]
# TODO: flip to ==0.7.0 once tomte v0.7.0 publishes to PyPI.
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@v0.7.0"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
